# batched-reduction-performance

./: .devnote  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
benchmarks/: CMakeLists.txt  benchmark.cpp  benchmark.cu
include/batched_reduction_performance/: CMakeLists.txt  batched_reduction_performance.hpp
include/batched_reduction_performance/batched_reduction_kernel/: CMakeLists.txt  batched_reduction_kernel.hpp
include/batched_reduction_performance/batched_reduction_operator/: CMakeLists.txt  batched_reduction_operator.hpp
include/batched_reduction_performance/checker/: CMakeLists.txt  checker.hpp
include/batched_reduction_performance/filler/: CMakeLists.txt  filler.hpp
include/batched_reduction_performance/printer/: CMakeLists.txt  printer.hpp
include/batched_reduction_performance/wrapper/: CMakeLists.txt  wrapper.hpp
report/: biblio.bib  report.tex
